--- a/index.html
+++ b/index.html
@@ -13,11 +13,50 @@
   <body>
   <div id="particles-js"></div>
 
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
+  aria-hidden="true" style="opacity: .4;">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn btn-success bg-transparent" data-bs-dismiss="modal" style="color: red;">Закрыть</button>
+          <h5 class="modal-title" id="exampleModalLabel" style="color: blue;">
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspАудиоплейер</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <div class="containermus">
+            <h2 id="music_title">Заголовок</h2>
+            <div class="player_progress" id="player_progress">
+              <div class="progress" id="progress">
+                <div class="music_duration">
+                  <span id="current_time">0:00</span>
+                  <span id="duration">0:00</span>
+                </div>
+              </div>
+            </div>
+            <div class="player_controls">
+              <i class="fa-solid fa-backward" title="Предыдущий" id="prev"></i>
+              <i class="fa-solid fa-play play-button" title="Запуск" id="play"></i>
+              <i class="fa-solid fa-forward" title="Следующий" id="next"></i>
+            </div>
+          </div>
+    
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  
 <div class="butnfon" id="butnfon">
 <button class="btn btn-primary bg-transparent"><a href="saluti/fireworks.html" target="_blank" 
 style="text-decoration: none;" title="Салют 1">Салют 1</a></button><br><br>
-<button class="btn btn-primary bg-transparent" type="button" data-bs-toggle="offcanvas" 
-data-bs-target="#offcanvasTop" aria-controls loop="offcanvasTop">Плейер</button><br><br>
+<button type="button" class="btn btn-primary bg-transparent" data-bs-toggle="modal" 
+data-bs-target="#exampleModal">Плейер</button><br><br>
+<!-- <button class="btn btn-primary bg-transparent" type="button" data-bs-toggle="offcanvas" 
+data-bs-target="#offcanvasTop" aria-controls loop="offcanvasTop">Плейер</button><br><br> -->
 <button class="btn btn-primary bg-transparent" type="button" data-bs-toggle="offcanvas" 
 data-bs-target="#offcanvasBottom" aria-controls loop="offcanvasBottom">Плейлист</button><br><br>
 <button class="btn btn-primary bg-transparent"><a href="saluti/jqueryfireworks.html" target="_blank" 
@@ -41,7 +80,7 @@ style="text-decoration: none;" title="Салют 2">Салют 2</a></button><br
   </div>
 </div></div></div>
 
-<div class="offcanvas offcanvas-top" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" 
+<!-- <div class="offcanvas offcanvas-top" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" 
     id="offcanvasTop" aria-labelledby="offcanvasTopLabel" style="opacity: .5;">
   <div class="offcanvas-body"> 
       <div class="containermus">
@@ -61,7 +100,7 @@ style="text-decoration: none;" title="Салют 2">Салют 2</a></button><br
         </div>
       </div>
   </div>
-</div>
+</div> -->
 
 <div class="offcanvas offcanvas-bottom" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" 
 id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel" style="opacity: .5;">
