--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Плеер 11</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magnific-popup@1.2.0/dist/magnific-popup.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"> -->
+<!-- <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
     <link rel="stylesheet" href="magpopup.css">
     <link rel="stylesheet" href="playmus.css" /> 
     <link rel="stylesheet" href="playlist.css" />
-    <title>Плейер 11</title>
     <link rel="icon" type="Images/x-icon" href="atsicon.ico"/>
-  </head>
-  <body>
+</head>
+<body>
   <div id="particles-js"></div>
 
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
@@ -65,14 +67,17 @@ style="text-decoration: none;" title="Салют 2">Салют 2</a></button><br
   <div class="col-6">
     <h5>Багамские острова&nbsp
 <button class="btn btn-primary bg-transparent">   
-  <a class="popup-with-zoom-anim" href="#small-dialog1" style="text-decoration: none;"><i class="fa-solid fa-crosshairs"></i></a>
+  <a class="popup-with-zoom-anim" href="#small-dialog1" style="text-decoration: none;">
+  <!-- <i class="fa-solid fa-crosshairs"></i> -->
+  <i class='bx bx-spa' style="color: #1a0d71;"></i>
 </button><span class="sveden">&nbspОписание</span>
+</a>
 <!-- <button class="btn btn-primary bg-transparent"><a class="popup-with-zoom-anim" href="#small-dialog1" style="text-decoration: none;"></a>Описание</button><br><br> -->
 </h5>
     <div id="small-dialog1" class="zoom-anim-dialog mfp-hide">
 <h3>Багамские острова</h3><p>
 Багамские острова — архипелаг, состоящий примерно из 700 островов (из них обитаемы только 30) и 2000 коралловых рифов 
-и занимающий пространство свыше 250 тыс. км². Площадь суши — 10 070 км². 
+и занимающий пространство свыше 250&nbspтыс.&nbspкм². Площадь суши — 10 070 км². 
 Происхождение названия точно не установлено, существуют две основные гипотезы на этот счёт. 
 Согласно одной из них, название происходит из фразы «Taino ba ha ma» («большая верхняя средняя земля») на 
 местном наречии одного из ныне вымерших аравакских языков; 
@@ -109,7 +114,7 @@ style="text-decoration: none;" title="Салют 2">Салют 2</a></button><br
 островов равнинная, широко распространены карстовые формы рельефа. Высшая точка архипелага находится на вершине холма Алверния, 
 63 метра над уровнем моря (на острове Кэт).
         
-Реки на Багамских островах практически отсутствуют. Много солёных озёр (сообщающихся с морем).
+Реки на Багамских островах практически отсутствуют. Здесь много солёных озёр (сообщающихся с морем).
         
 Животный мир довольно беден и представлен в основном птицами (большей частью перелётными водоплавающими), а также игуанами, 
 агути и летучими мышами. Морские воды богаты рыбой, ракообразными и моллюсками.
@@ -128,8 +133,11 @@ style="text-decoration: none;" title="Салют 2">Салют 2</a></button><br
   <div class="col-6">
 <h5>Острова Кука&nbsp
 <button class="btn btn-primary bg-transparent">   
-  <a class="popup-with-zoom-anim" href="#small-dialog2" style="text-decoration: none;"><i class="fa-solid fa-magnifying-glass"></i></a>  
-</button><span class="sveden">&nbspОписание</span>
+  <a class="popup-with-zoom-anim" href="#small-dialog2" style="text-decoration: none;">
+    <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+    <i class='bx bx-dish' style="color: #1a0d71;"></i>
+  </button><span class="sveden">&nbspОписание</span>
+  </a>  
 </h5>
     <div id="small-dialog2" class="zoom-anim-dialog mfp-hide">
 <h3>Острова Кука</h3><p>
