--- a/index.html
+++ b/index.html
@@ -10,11 +10,48 @@
 <!-- <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
     <link rel="stylesheet" href="magpopup.css">
+    <link rel="stylesheet" href="preloadnew.css">
+    <link rel="stylesheet" href="spinner1.css">
     <link rel="stylesheet" href="playmus.css" /> 
     <link rel="stylesheet" href="playlist.css" />
     <link rel="icon" type="Images/x-icon" href="atsicon.ico"/>
 </head>
 <body>
+  <div class="preloader">
+    <div class="container-fluid text-center">
+      <div class="row">
+      <div class="col-4">
+    <div class="spinner">Загрузка
+      <div class="spinner-sector spinner-sector-red"></div>
+      <div class="spinner-sector spinner-sector-blue"></div>
+      <div class="spinner-sector spinner-sector-green"></div>
+    </div>
+  
+  </div>  
+  <div class="col-8">
+    <p class="prob"><span style="font-size: 30px; color: red;">
+  Пока ожидаем загрузки фотографий, начнём:</span><br><br> 
+Багамские острова — архипелаг, состоящий примерно из 700 островов (из них обитаемы только 30) и 2000 коралловых рифов 
+и занимающий пространство свыше 250&nbspтыс.&nbspкм². Площадь суши — 10 070 км². 
+Происхождение названия точно не установлено, существуют две основные гипотезы на этот счёт. 
+Согласно одной из них, название происходит из фразы «Taino ba ha ma» («большая верхняя средняя земля») на 
+местном наречии одного из ныне вымерших аравакских языков; 
+согласно другой гипотезе, название возникло из исп. baja mar («мелкая вода» «мелкое море» или «отлив»), 
+отражающей мелководье в этом районе. <br><br> 
+  Острова Кука — архипелаг и одноимённое самоуправляемое государственное образование в свободной ассоциации 
+с Новой Зеландией в южной части Тихого океана в Полинезии.
+В состав территории входят 15 островов, 3 из которых 
+необитаемы: 7 островов в Северной группе и 8 — в Южной. Площадь суши — 236 км².
+Расстояние от самого северного (атолл Пенрин или Тонгарева) до самого южного острова (остров Мангаиа) 
+составляет около 1400 км.
+Современное название архипелаг получил в XIX веке от русского мореплавателя Ивана Крузенштерна в честь английского 
+путешественника Джеймса Кука. Сам Кук, побывавший на островах Южной группы в 1773—1775 годах, назвал их Острова Херви.
+</p>
+    </div>
+  
+  </div></div></div>
+</div>
+  
   <div id="particles-js"></div>
 
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
@@ -257,6 +294,7 @@ id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel" style="opacity: .5;"
   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/magnific-popup@1.2.0/dist/jquery.magnific-popup.min.js"></script>
+  <script src="preloadnew.js"></script>
   <script src="magpopup.js"></script>   <!-- <script src="magpopupzoom.js"></script> -->
   
 </body>
